# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "senpy-cli"
version = "0.1.1"
authors = ["Fuwn <fuwnzy@gmail.com>"]
edition = "2021"
description = "Command-line interface to The Senpy Club API"
documentation = "https://docs.rs/senpy-cli/"
readme = "README.rst"
homepage = "https://github.com/senpy-club/cli"
repository = "https://github.com/senpy-club/cli"
license = "GPL-3.0-only"
keywords = ["rust", "anime", "senpy"]
categories = ["web-programming", "web-programming::http-server", "command-line-interface", "command-line-utilities"]

[[bin]]
name = "senpy"
path = "src/main.rs"

# Slower builds, faster executables
[profile.release]
lto = "fat"
codegen-units = 1
# Optimize for size
opt-level = "s"

[dependencies]
# CLI
clap = "3.1.6"

# The Senpy Club API
senpy = "0.1.2"

# Serialization
serde = "1.0.136"
serde_json = "1.0.79"
serde_yaml = "0.8.23"
serde_dhall = "0.11.0"
